t Add new class CustomNamer and tests for it
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -50,7 +50,7 @@ add_executable(${PROJECT_NAME}
         utilities/StringUtilsTests.cpp
         utilities/SystemUtilsTests.cpp
         writers/StringWriterTests.cpp
-        )
+        namers/CustomNamerTests.cpp)
 target_link_libraries(${PROJECT_NAME}
         ApprovalTests::ApprovalTests
         doctest::doctest)
