F Add TemplatedCustomNamer class
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -58,6 +58,8 @@ add_library(${PROJECT_NAME}
         namers/SeparateApprovedAndReceivedDirectoriesNamer.cpp
         namers/SubdirectoryDisposer.h
         namers/SubdirectoryDisposer.cpp
+        namers/TemplatedCustomNamer.h
+        namers/TemplatedCustomNamer.cpp
         reporters/AutoApproveIfMissingReporter.h
         reporters/AutoApproveIfMissingReporter.cpp
         reporters/AutoApproveReporter.h
