t Add experimental DocTestReporter reporter
This uses doctest's CHECK to compare the contents of received and approved

--- a/examples/out_of_source/CMakeLists.txt
+++ b/examples/out_of_source/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD 11)
 add_executable(${EXE_NAME}
         out_of_source_main.cpp
         out_of_source_test.cpp
+        DocTestReporter.cpp
+        DocTestReporter.h
         )
 target_link_libraries(${EXE_NAME} ApprovalTests::ApprovalTests doctest::doctest)
 
