e Detect any changes in approved file names when building

--- a/examples/out_of_source/CMakeLists.txt
+++ b/examples/out_of_source/CMakeLists.txt
@@ -18,5 +18,5 @@ add_test(NAME ${EXE_NAME} COMMAND ${EXE_NAME})
 
 install(TARGETS ${EXE_NAME} DESTINATION ${EXE_NAME})
 # Copy all approved files
-file(GLOB_RECURSE APPROVED_FILES_TO_INSTALL ${CMAKE_CURRENT_SOURCE_DIR} "*.approved.*")
+file(GLOB_RECURSE APPROVED_FILES_TO_INSTALL CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR} "*.approved.*")
 install(FILES ${APPROVED_FILES_TO_INSTALL} DESTINATION ${EXE_NAME})
