B!! TextDiffReporter do not throw if files differ (#106)
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(${PROJECT_NAME}
         reporters/ReporterTests.cpp
         reporters/ReporterTests.cpp
         reporters/TestReporter.h
+        reporters/TextDiffReporterTests.cpp
         scrubbers/GuidScrubberTests.cpp
         scrubbers/ScrubberTests.cpp
         utilities/CartesianProductTests.cpp
