--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -36,7 +36,7 @@ jobs:
   #        run: ./scripts/check_links.sh
 
   Linux:
-    needs: clang-format
+    # needs: clang-format
     # if: false # Disable this platform temporarily
     runs-on: ubuntu-${{ matrix.os-version }}
     strategy:
@@ -124,7 +124,7 @@ jobs:
       - uses: ./.github/actions/build-and-test
 
   macOS:
-    needs: clang-format
+    # needs: clang-format
     # if: false # Disable this platform temporarily
     runs-on: macos-${{ matrix.os-version }}
     strategy:
@@ -182,7 +182,7 @@ jobs:
       - uses: ./.github/actions/build-and-test
 
   Windows:
-    needs: clang-format
+    # needs: clang-format
     # if: false # Disable this platform temporarily
     runs-on: windows-${{ matrix.os-version }}
     strategy:
