e Add gulrak's file system, for use in tests only
This is a header-only single-file std::filesystem compatible helper library,
based on the C++17 and C++20 specs, but implemented for C++11, C++14, C++17 or C++20
(tightly following the C++17 standard with very few documented exceptions).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ endif ()
 if (NOT_SUBPROJECT)
     add_subdirectory(CMake/cpputest)
     add_subdirectory(CMake/googletest)
+    add_subdirectory(CMake/filesystem)
 endif ()
 
 # This will optionally add the other third-party sub-directories
