e Add another reminder when adding new dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,9 @@ if (APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
 endif ()
 
 if (NOT_SUBPROJECT)
-    # If adding new dependencies here, update scripts/clone_dependencies.sh
+    # If adding new dependencies here, update:
+    #   scripts/clone_dependencies.sh
+    #   github.com/claremacrae/ApprovalTests.cpp.CMakeSamples/dev_approvals_fetch_content
     add_subdirectory(CMake/cpputest)
     add_subdirectory(CMake/googletest)
     add_subdirectory(CMake/filesystem)
