e out_of_source installation keeps directory structure
... of approved files. Code is horribly hard-coded for now

--- a/examples/out_of_source/CMakeLists.txt
+++ b/examples/out_of_source/CMakeLists.txt
@@ -20,5 +20,10 @@ add_test(NAME ${EXE_NAME} COMMAND ${EXE_NAME})
 
 install(TARGETS ${EXE_NAME} DESTINATION ${EXE_NAME})
 # Copy all approved files
-file(GLOB_RECURSE APPROVED_FILES_TO_INSTALL CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR} "*.approved.*")
-install(FILES ${APPROVED_FILES_TO_INSTALL} DESTINATION ${EXE_NAME})
+# TODO Remove the manual list
+install(FILES out_of_source_test.out_of_source_sample.approved.txt
+        DESTINATION ${EXE_NAME}
+        )
+install(FILES approval_tests/out_of_source_test.out_of_source_approvals_sub-directory_sample.approved.txt
+        DESTINATION ${EXE_NAME}/approval_tests/
+        )
