e Fixed install of approved files to retain directory structure

--- a/examples/out_of_source/CMakeLists.txt
+++ b/examples/out_of_source/CMakeLists.txt
@@ -20,10 +20,8 @@ add_test(NAME ${EXE_NAME} COMMAND ${EXE_NAME})
 
 install(TARGETS ${EXE_NAME} DESTINATION ${EXE_NAME})
 # Copy all approved files
-# TODO Remove the manual list
-install(FILES out_of_source_test.out_of_source_sample.approved.txt
+install(
+        DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
         DESTINATION ${EXE_NAME}
-        )
-install(FILES approval_tests/out_of_source_test.out_of_source_approvals_sub-directory_sample.approved.txt
-        DESTINATION ${EXE_NAME}/approval_tests/
+        FILES_MATCHING PATTERN "*approved*"
         )
