t Test out-of-source example with source in sub-directory
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/examples/out_of_source/CMakeLists.txt
+++ b/examples/out_of_source/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(${EXE_NAME}
         out_of_source_test.cpp
         DocTestReporter.cpp
         DocTestReporter.h
+        source_subdir/source_sub_dir_tests.cpp
         )
 target_link_libraries(${EXE_NAME} ApprovalTests::ApprovalTests doctest::doctest ghc_filesystem)
 set_target_properties(${EXE_NAME} PROPERTIES
