--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -237,3 +237,31 @@ jobs:
         run: |
           cd ${{ env.BUILD_PATH }}
           ctest --verbose --output-on-failure -C Debug
+
+  Cygwin:
+    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Cygwin
+        uses: egor-tensin/setup-cygwin@v3 # https://github.com/marketplace/actions/install-cygwin
+        with:
+          platform: x64
+          packages: cmake libboost-devel libtool gcc gcc-g++ binutils make
+
+      - name: Build and test
+        run: |
+          basic() {
+            pwd
+            cd /cygdrive/d/a/ApprovalTests.cpp/ApprovalTests.cpp
+            mkdir cmake-build
+            cd cmake-build
+            # Debug gives Assembler messages: ... CMakeFiles/Catch2_Tests.dir/main.cpp.o: 'file too big'
+            cmake -G 'Unix Makefiles' .. -DCMAKE_BUILD_TYPE=Release
+            cmake --build . --parallel 4
+            ctest --verbose --output-on-failure -C Release
+          }
+          basic
+        shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
