--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,29 +3,14 @@ environment:
   matrix:
     - TARGET: cygwin
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      GENERATOR: '"Unix Makefiles"'
 
     - TARGET: mingw
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      GENERATOR: '"MinGW Makefiles" -DCMAKE_IGNORE_PATH="C:/Program Files/Git/usr/bin" -DBoost_INCLUDE_DIR=C:\Libraries\boost_1_69_0'
-      MINGWPATH: 'C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin'
 
 branches:
   except:
     - travis_ccache
 
-before_build:
-- cmd: |
-    IF "%TARGET%" == "mingw" set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
-    IF "%TARGET%" == "mingw" set PATH=%MINGWPATH%;%PATH%
-    IF "%TARGET%" == "cygwin" set "PATH=C:\cygwin\bin;C:\cygwin\usr\bin;%PATH%"
-    IF "%TARGET%" == "cygwin" "C:/cygwin/setup-x86.exe" --quiet-mode --packages libboost-devel  > cygwin-install.txt || bash -c "cat cygwin-install.txt"
-    cmake -G %GENERATOR% .
-
 build_script:
 - cmd: |
-    cmake --build .
-
-test_script:
-- cmd: |
-    ctest --verbose -C Debug
+    echo "CygWin and MinGW builds moved to GitHub Actions."
