e Install YAML type hints to fix Python CI build

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -58,6 +58,7 @@ jobs:
 
     - name: Check type hints
       run: |
+        python3 -m pip install types-PyYAML
         cd ApprovalTests/ApprovalTests.cpp/build
         ./check_type_hints.sh
 
