t Add test for Storyboard Feature
Co-Authored-By: Clare Macrae <github@cfmacrae.fastmail.co.uk>

--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${PROJECT_NAME}
 # 1. It's possible to specify your Boost location on the CMake command line,
 # for example:
 #  -DBOOST_ROOT=/Users/clare/Documents/develop/tools/boost/boost_1_71_0/
+#  -DBOOST_ROOT=/usr/local/Cellar/boost/1.76.0/
 # 2. In CLion, you can supply this argument in each of your CMake profiles, with:
 #    Preferences -> Build, Execution, Deployment -> CMake -> 'CMake options:'
 find_package(Boost 1.60.0 COMPONENTS REQUIRED)
