F!! Grid Utility to print 2D textual grid
Co-Authored-By: Clare Macrae <github@cfmacrae.fastmail.co.uk>

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -130,6 +130,8 @@ add_library(${PROJECT_NAME}
         utilities/FileUtils.cpp
         utilities/FileUtilsSystemSpecific.h
         utilities/FileUtilsSystemSpecific.cpp
+        utilities/Grid.h
+        utilities/Grid.cpp
         utilities/MachineBlocker.h
         utilities/MachineBlocker.cpp
         utilities/Macros.h
