--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -46,7 +46,11 @@ jobs:
       with:
         repository: isidore/vcpkg
         path: vcpkg
-   
+    - name: print dir
+      run: |
+        apt-get install tree
+        tree -d -L 4 .
+
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
