e vcpkg at same level as approvaltest.cpp
Co-Authored-By: Clare Macrae <github@cfmacrae.fastmail.co.uk>

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -45,7 +45,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: isidore/vcpkg
-        path: vcpkg
+        path: ApprovalTests/vcpkg
+        
     - name: print dir
       run: |
         sudo apt-get install tree
