--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(${PROJECT_NAME}
         docs/ToStringTemplateExample.cpp
         docs/ToStringWrapperExample.cpp
         docs/Tutorial.cpp
+        namers/TemplatedCustomNamerExamples.cpp
         namers/TemplatedCustomNamerTests.cpp
         namers/DocTestNamerTests.cpp
         namers/NamerTests.cpp
