t separated examples from NamerTests
Co-Authored-By: Clare Macrae <github@cfmacrae.fastmail.co.uk>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(${PROJECT_NAME}
         namers/TemplatedCustomNamerExamples.cpp
         namers/TemplatedCustomNamerTests.cpp
         namers/DocTestNamerTests.cpp
+        namers/NamerExamples.cpp
         namers/NamerTests.cpp
         reporters/BlockingReporterTests.cpp
         reporters/CIBuildOnlyReporterTests.cpp
