t fully compiling examples
Co-Authored-By: Clare Macrae <github@cfmacrae.fastmail.co.uk>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${PROJECT_NAME}
         VectorTests.cpp
         comparators/ComparatorDisposerTest.cpp
         core/ApprovalExceptionTests.cpp
+        core/FileApproverExamples.cpp
         core/FileApproverTests.cpp
         core/OptionsExamples.cpp
         core/OptionsTests.cpp
