--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
         main.cpp
         ApprovalsTests.cpp
+        CombinationExamples.cpp
         CombinationTests.cpp
         CustomizingToStringTests.cpp
         DocTestApprovalTestTests.cpp
