--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -6,6 +6,7 @@ project(DocTest_Tests)
 set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
         main.cpp
+        ApprovalsExamples.cpp
         ApprovalsTests.cpp
         CombinationExamples.cpp
         CombinationTests.cpp
