Revert "t Suppress running of tests on cygwin (#120)"
This reverts commit 8f8e96a59fe2325b3abb810914b1c605c58614ea.

--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -5,7 +5,7 @@ endif ()
 project(Boost_Tests)
 set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME}
-        main.cpp
+#        main.cpp
         BoostTestApprovalTestsTests.cpp
         )
 
