--- a/.github/workflows/cygwin.yml
+++ b/.github/workflows/cygwin.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   Cygwin:
     runs-on: windows-latest
+    timeout-minutes: 20 # See https://github.com/approvals/ApprovalTests.cpp/issues/192
     strategy:
       fail-fast: false
     steps:
