e Log the cmake version in cygwin CI build
See #192

--- a/.github/workflows/cygwin.yml
+++ b/.github/workflows/cygwin.yml
@@ -33,6 +33,7 @@ jobs:
             mkdir cmake-build
             cd cmake-build
             # Debug gives Assembler messages: ... CMakeFiles/Catch2_Tests.dir/main.cpp.o: 'file too big'
+            cmake --version
             cmake -G 'Unix Makefiles' .. -DCMAKE_BUILD_TYPE=Release
             cmake --build . --parallel 4
             ctest --verbose --output-on-failure -C Release
