e See if using hardlinks fixes timeout in cygwin CI build
See #192

--- a/.github/workflows/cygwin.yml
+++ b/.github/workflows/cygwin.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           platform: x64
           packages: cmake libboost-devel libtool gcc gcc-g++ binutils make
+          hardlinks: 1
 
       - name: Build and test
         run: |
