--- a/.github/workflows/cygwin.yml
+++ b/.github/workflows/cygwin.yml
@@ -23,7 +23,8 @@ jobs:
         uses: egor-tensin/setup-cygwin@v3 # https://github.com/marketplace/actions/install-cygwin
         with:
           platform: x64
-          packages: cmake libboost-devel libtool gcc gcc-g++ binutils make
+          # libboost-devel
+          packages: cmake libtool gcc gcc-g++ binutils make
           hardlinks: 1
 
       - name: Build and test
