E!! Remove gcc from cygwin packages list
Based on this commit of the action we are using:
https://github.com/egor-tensin/setup-cygwin/commit/2f767d504c3b69fa0e537596f9cab0fe8394a5a9
See #192

--- a/.github/workflows/cygwin.yml
+++ b/.github/workflows/cygwin.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           platform: x64
           # libboost-devel
-          packages: cmake libtool gcc gcc-g++ binutils make
+          packages: cmake libtool gcc-g++ binutils make
           hardlinks: 1
 
       - name: Build and test
