E!! Disable mingw.yml on this branch
See #192

--- a/.github/workflows/mingw.yml
+++ b/.github/workflows/mingw.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   MinGW:
+    if: false # Disable this build temporarily
     runs-on: windows-latest
     strategy:
       fail-fast: false
