E!! Disable python-tests.yml on this branch
See #192

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -17,6 +17,7 @@ jobs:
   build:
 
     runs-on: ubuntu-20.04
+    if: false # Disable this build temporarily
 
     steps:
     - name: Check out ApprovalTests.cpp
