e Reinstate generator for clang13
Co-Authored-By: Llewellyn Falco <llewellyn.falco@gmail.com>

--- a/.github/workflows/clang13-temp.yml
+++ b/.github/workflows/clang13-temp.yml
@@ -11,6 +11,10 @@ jobs:
   Linux-Clang13:
     # if: false # Disable this platform temporarily
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - generator: '"Unix Makefiles"'
 
     name: Linux Clang13
     env:
